<resources>
    <string name="app_name">Drunk-o-meter</string>

    <!-- Texting challenge onboarding -->
    <string name="text_4">My relationship to whiskey is on the rocks</string>
    <string name="text_5">If life gives you lemons, add vodka</string>
    <string name="text_0">I swear to Drunk, I am not God</string>
    <string name="text_3">Act single, see double, drink triple</string>
    <string name="text_1">A party without alcohol is just a meeting</string>
    <string name="text_2">I drink because I work, I work so I can drink</string>
    <string name="text_6">Sometimes I drink water to surprise my liver</string>
    <string name="text_7">I am not as think as you drunk I am</string>
    <string name="text_8">Beauty is in the eye of the beer holder</string>
    <string name="text_9">I drink to make people more interesting</string>
    <string name="text_10">Great minds drink alike</string>
    <string name="baselineComplete">Aaaand you\'re done! 🔥</string>
    <string name="typingChallengeComplete">Typing challenge completed! Let\'s take a winner selfie 🔥</string>

    <string name="ONBOARDING">OnboardingActivity</string>
    <string name="TYPINGCHALLENGE">DrunkometerActivity</string>

    <string name="next_name">Continue</string>
    <string name="next_typingIntro">Start typing challenge</string>
    <string name="next_completeOnboarding">Continue</string>
    <string name="next_takeSelfie">Take a Selfie</string>

    <string name="ageInfo">To use this app you have to be at least 18! \n Please enter the year you were born in.</string>

    <string name="usernameTitle">Welcome to Drunk-O-Meter!</string>
    <string name="usernameDescription">What\'s your name, mate?</string>

    <string name="personalInfoIntro">Perfect, now I need to get to know you better in order to give you the best recommendations. But don\'t worry - I\'m good at keeping secrets!</string>
    <string name="personalInfoWeight">What\'s your weight?</string>
    <string name="personalInfoGender">What\'s your biological gender?</string>

    <string name="typingChallengeIntroTitle">Typing Challenge</string>
    <string name="typingChallengeIntroDescription">Let\'s continue with a quick typing challenge. Go!</string>
    <string name="baselineIntroDescription">In order to evaluate your Drunkenness Score, we need to learn about your typing performance when being sober. We created a quick typing challenge for you. Let\'s go!</string>

    <string name="feedbackTitle">Feedback-Round</string>
    <string name="feedbackDescription">Before we start: Did you like the last recommendation? What did you drink?</string>
    <string name="feedbackOtherDrink">Which type of drink was it?</string>

    <string name="recommendation_drunkennessScore">Drunkenness Score</string>
    <string name="recommendation_intro">My recommendation to you:</string>
    <string name="recommendation_drinks_image">Drink Image</string>
    <string name="recommendation_drinks_name">Drink Name</string>
    <string name="recommendation_drinks_amount">Drink Amount</string>
    <string name="recommendation_safeToText_title">Message Analysis</string>
    <string name="recommendation_safeToText_partOne">Your message for </string>
    <string name="recommendation_safeToText_partTwo">You can copy it now!</string>

    <string name="no_value">No value</string>
    <string name="calculating_drunkenness_score">Calculating Drunkenness</string>
    <string name="please_wait">Just a little longer!</string>

    <string name="textMessageInputTitle">Type your message 💬</string>
    <string name="textMessageInputDescription">This is a description</string>
    <string name="textMessageIntroTitle">Need advice on whether you should text that person?</string>
    <string name="textMessageIntroDescription">Do you feel the urge to someone right now? If so, we would love to help. Write us first, and we help you analyze, if you should really send that text.</string>
    <string name="next_textMessageInput">Yes, I wanna text!</string>
    <string name="next_skipTextMessage">No thanks I am good</string>

    <string name="previous_chats">Chat Messages</string>
    <string name="no_chats">You have not created any messages yet!</string>
    <string name="chat_detail_title">Chat Message Details</string>

    <string name="preferences_title">Drink Preferences</string>
    <string name="preferences_onboarding">Here\'s a list of drinks that I will recommend to you. Uncheck the ones you do not like!</string>

    <string name="wine">Wine</string>
    <string name="beer">Beer</string>
    <string name="aperitif">Aperitif</string>
    <string name="cocktails">Cocktails</string>
    <string name="shots">Shots</string>
    <string name="hotDrinks">Hot Drinks</string>

</resources>