<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textMessageIntroTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textMessageIntroTitle"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textMessageIntroDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/textMessageIntroTitle"
        android:text="@string/textMessageIntroDescription"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_shape"
            android:layout_marginRight="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/skipTextMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:onClick="skipTextMessage"
                android:text="@string/next_skipTextMessage"
                android:textColor="@color/primary" />
        </FrameLayout>

            <Button
                android:id="@+id/goToTextMessage"
                android:layout_width="1dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:onClick="goToTextMessageInput"
                android:text="@string/next_textMessageInput" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>