<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingActivity"
    android:layout_margin="40dp">

    <TextView
        android:id="@+id/usernameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usernameTitle"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/personalDataInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/usernameTitle"
        android:text="@string/personalInfoIntro"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/usernameDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/personalDataInfo"
        android:text="@string/usernameDescription"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/usernameDescription" />

    <TextView
        android:id="@+id/weightDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/usernameInput"
        android:text="@string/personalInfoWeight"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/weightDescription"
        android:hint="Weight in whole kg"
        android:maxLength="4"
        android:maxLines="1"
        android:digits="0123456789"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/genderDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/weightInput"
        android:text="@string/personalInfoGender"
        android:textColor="#000000" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:checkedButton="@id/btnFemale"
        app:layout_constraintTop_toBottomOf="@id/genderDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnFemale"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Female"
            android:theme="@style/ModeButton" />

        <Button
            android:id="@+id/btnMale"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Male"
            android:theme="@style/ModeButton" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <Button
        android:id="@+id/saveUsername"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:onClick="savePersonalData"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0" />
</androidx.constraintlayout.widget.ConstraintLayout>