<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recommender.PreferencesFragment"
    android:id="@+id/fragment_preferences">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preferences_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp">

        <ScrollView
            android:id="@+id/preferences_scrolling"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/preferences_lists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/preferences_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preferences_title"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/preferences_onboarding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/preferences_onboarding"
                    android:textColor="#000000"
                    app:layout_constraintTop_toBottomOf="@id/preferences_title" />

                <TextView
                    android:id="@+id/preferences_wine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/wine"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    app:layout_constraintTop_toBottomOf="@id/preferences_onboarding" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/preferences_wine_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/preferences_wine" />

                <TextView
                    android:id="@+id/preferences_beer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/preferences_wine_list"
                    android:text="@string/beer"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/preferences_beer_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/preferences_beer" />

                <TextView
                    android:id="@+id/preferences_cocktails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/preferences_beer_list"
                    android:text="@string/cocktails"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/preferences_cocktails_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/preferences_cocktails" />

                <TextView
                    android:id="@+id/preferences_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/preferences_cocktails_list"
                    android:text="@string/shots"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/preferences_shots_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/preferences_shots" />

                <TextView
                    android:id="@+id/preferences_hot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/preferences_shots_list"
                    android:text="@string/hotDrinks"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/preferences_hot_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/preferences_hot" />

                <TextView
                    android:id="@+id/preferences_onboarding_spaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    app:layout_constraintTop_toBottomOf="@id/preferences_hot_list"
                    android:visibility="gone"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/preferences_onboarding_continue"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="goToHomeScreen"
            android:text="Save"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>