<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:layout_margin="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/text_input_layout">

    <TextView
        android:id="@+id/textMessageInputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textMessageInputTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textMessageRecipientInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Recipient"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/textMessageInputTitle" />

    <EditText
        android:id="@+id/textMessageTextInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:padding="8dp"
        android:background="#34BB86FC"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Type your message..."
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/textMessageRecipientInput" />

    <Button
        android:id="@+id/analyzeTextMessage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:onClick="goToWaitingScreen"
        android:text="Submit Text Message"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/waiting_layout"
        android:visibility="invisible">

        <TextView
            android:id="@+id/waiting_calculatingDrunkennessScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/calculating_drunkenness_score"
            android:textColor="#000000"
            android:textSize="24sp"/>

        <ProgressBar
            android:id="@+id/waiting_progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/waiting_pleaseWait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/waiting_progressBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/please_wait"
            android:textColor="#808080"
            android:textSize="12sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

